ignore vue,react,webpack,lib

--- a/06_vue_shopping_centre/src/index.html
+++ b/06_vue_shopping_centre/src/index.html
@@ -2,11 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Webpack Study</title>
+    <title>Vue Shopping Mall</title>
 </head>
 <body>
-    <p>123123111</p>
     <div id="app">
     </div>
-<script type="text/javascript" src="bundle.js"></script></body>
+</body>
 </html>
